--- a/package.json
+++ b/package.json
@@ -41,8 +41,6 @@
     "@radix-ui/react-toggle": "^1.1.3",
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
-    "@scandit/web-datacapture-barcode": "^7.0.1",
-    "@scandit/web-datacapture-core": "^7.0.1",
     "@sendgrid/mail": "^8.1.5",
     "@tanstack/react-query": "^5.75.7",
     "@types/memoizee": "^0.4.12",
@@ -59,6 +57,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
+    "html5-qrcode": "^2.3.8",
     "input-otp": "^1.4.2",
     "knex": "^3.1.0",
     "lucide-react": "^0.453.0",
