Restored to '28785164f821cda7b9dc7fd91a6fd379807324b5'
Replit-Restored-To: 28785164f821cda7b9dc7fd91a6fd379807324b5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,9 @@
   "compilerOptions": {
     "incremental": true,
     "tsBuildInfoFile": "./node_modules/typescript/tsbuildinfo",
-    "noEmit": false,
+    "noEmit": true,
     "module": "ESNext",
     "strict": true,
-    "target": "ESNext",
-    "moduleResolution": "NodeNext",
-    "allowJs": true,
-    "outDir": "dist",
     "lib": ["esnext", "dom", "dom.iterable"],
     "jsx": "preserve",
     "esModuleInterop": true,
